load-testing/terraform/workspaces/loadtesting/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 30m
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{"haproxy.router.openshift.io/timeout":"30m"},"labels":{"aps-generated-by":"gwa-cli","aps-namespace":"apsperf","aps-published-on":"2021.03-Mar.09","aps-published-ts":"1615287425","aps-select-tag":"ns.apsperf","aps-ssl":"tls"},"name":"wild-ns-apsperf-aps-perf-cloud-api-gov-bc-ca.test.api.gov.bc.ca","namespace":"264e6f-test"},"spec":{"host":"aps-perf-cloud-api-gov-bc-ca.test.api.gov.bc.ca","port":{"targetPort":"ko [...]
      CERTIFICATE-----\nMIIJCjCCB/KgAwIBAgIQO1hJ2KZwJRo8IOp4Wb35ljANBgkqhkiG9w0BAQsFADCB\nujELMAkGA1UEBhMCVVMxFjAUBgNVBAoTDUVudHJ1c3QsIEluYy4xKDAmBgNVBAsT\nH1NlZSB3d3cuZW50cnVzdC5uZXQvbGVnYWwtdGVybXMxOTA3BgNVBAsTMChjKSAy\nMDEyIEVudHJ1c3QsIEluYy4gLSBmb3IgYXV0aG9yaXplZCB1c2Ugb25seTEuMCwG\nA1UEAxMlRW50cnVzdCBDZXJ0aWZpY2F0aW9uIEF1dGhvcml0eSAtIEwxSzAeFw0y\nMTAyMTYxOTI3MjRaFw0yMTEwMTYxOTI3MjNaMIGPMQswCQYDVQQGEwJDQTEZMBcG\nA1UECBMQQnJpdGlzaCBDb2x1bWJpYTERMA8GA1UEBxMIVmljdG9yaWExNzA1BgNV\nBAoTLkdvdmVybm [...]
      CERTIFICATE-----\n-----BEGIN
      CERTIFICATE-----\nMIIFDjCCA/agAwIBAgIMDulMwwAAAABR03eFMA0GCSqGSIb3DQEBCwUAMIG+MQsw\nCQYDVQQGEwJVUzEWMBQGA1UEChMNRW50cnVzdCwgSW5jLjEoMCYGA1UECxMfU2Vl\nIHd3dy5lbnRydXN0Lm5ldC9sZWdhbC10ZXJtczE5MDcGA1UECxMwKGMpIDIwMDkg\nRW50cnVzdCwgSW5jLiAtIGZvciBhdXRob3JpemVkIHVzZSBvbmx5MTIwMAYDVQQD\nEylFbnRydXN0IFJvb3QgQ2VydGlmaWNhdGlvbiBBdXRob3JpdHkgLSBHMjAeFw0x\nNTEwMDUxOTEzNTZaFw0zMDEyMDUxOTQzNTZaMIG6MQswCQYDVQQGEwJVUzEWMBQG\nA1UEChMNRW50cnVzdCwgSW5jLjEoMCYGA1UECxMfU2VlIHd3dy5lbnRydXN0Lm5l\ndC9sZWdhbC10ZX [...]
      CERTIFICATE-----\n-----BEGIN
      CERTIFICATE-----\nMIIEPjCCAyagAwIBAgIESlOMKDANBgkqhkiG9w0BAQsFADCBvjELMAkGA1UEBhMC\nVVMxFjAUBgNVBAoTDUVudHJ1c3QsIEluYy4xKDAmBgNVBAsTH1NlZSB3d3cuZW50\ncnVzdC5uZXQvbGVnYWwtdGVybXMxOTA3BgNVBAsTMChjKSAyMDA5IEVudHJ1c3Qs\nIEluYy4gLSBmb3IgYXV0aG9yaXplZCB1c2Ugb25seTEyMDAGA1UEAxMpRW50cnVz\ndCBSb290IENlcnRpZmljYXRpb24gQXV0aG9yaXR5IC0gRzIwHhcNMDkwNzA3MTcy\nNTU0WhcNMzAxMjA3MTc1NTU0WjCBvjELMAkGA1UEBhMCVVMxFjAUBgNVBAoTDUVu\ndHJ1c3QsIEluYy4xKDAmBgNVBAsTH1NlZSB3d3cuZW50cnVzdC5uZXQvbGVnYWwt\ndGVybXMxOTA3Bg [...]
      CERTIFICATE-----","insecureEdgeTerminationPolicy":"Redirect","key":"-----BEGIN
      PRIVATE
      KEY-----\nMIIJQwIBADANBgkqhkiG9w0BAQEFAASCCS0wggkpAgEAAoICAQDrgCmQbg1y4Utl\nae01yaqhIsmopX72uC/jh3j3iRNd6dOVP//tO5yPIubyDkSNmZmaXFPIXciq564g\n6HF0lyQ6Ht04dAcAMi/HZtFj9sD5Zp2kyiujijwlJeoKIYrz1DhbuzLD+ut5cedn\nKDf/oTeo27TDlLQ4yvRMyTa5A3fZG3xAuexcem2KzBBck3JGdCf+mESHvrkgk63q\nSUuODo2VpzdSQ22Dr5M/+fktUHQ0gXcjOFpHwueDSkjhv77z8Wsqx9TgV3a9Z2o7\n69/HAjmBfI6vBxb34fmf/yG2MvP/MH45tzTNQRbGTYKoqXN9FmxDezBzAuzviz98\nU8q0B8/iNuxCJtebkjGyeY5WNirrX5lDBqe20sDKxkCd+OSDR6UoraNMPvEIeS5A\noFsUvYDyFYK8EjUTfVBjxn [...]
      PRIVATE
      KEY-----","termination":"edge"},"to":{"kind":"Service","name":"kong-kong-proxy","weight":100},"wildcardPolicy":"None"},"status":{"ingress":[{"host":"aps-perf-cloud-api-gov-bc-ca.test.api.gov.bc.ca","routerName":"router","wildcardPolicy":"None"}]}}
  selfLink: >-
    /apis/route.openshift.io/v1/namespaces/264e6f-test/routes/wild-ns-apsperf-aps-perf-cloud-api-gov-bc-ca.test.api.gov.bc.ca
  resourceVersion: '698116399'
  name: temp-snowplow.test.api.gov.bc.ca
  uid: 59718d4d-0386-48d4-939b-3739f002ff9b
  creationTimestamp: '2021-03-09T10:57:07Z'
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2021-03-09T10:57:07Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:haproxy.router.openshift.io/timeout': {}
            'f:kubectl.kubernetes.io/last-applied-configuration': {}
          'f:labels':
            .: {}
            'f:aps-generated-by': {}
            'f:aps-namespace': {}
            'f:aps-published-on': {}
            'f:aps-published-ts': {}
            'f:aps-select-tag': {}
            'f:aps-ssl': {}
        'f:spec':
          'f:host': {}
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:insecureEdgeTerminationPolicy': {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2021-03-09T10:57:08Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:tls':
            'f:certificate': {}
            'f:key': {}
        'f:status':
          'f:ingress': {}
  namespace: 264e6f-test
  labels:
    aps-generated-by: gwa-cli
    aps-namespace: apsperf
    aps-published-on: 2021.03-Mar.09
    aps-published-ts: '1615287425'
    aps-select-tag: ns.apsperf
    aps-ssl: tls
spec:
  host: snowplow.test.api.gov.bc.ca
  to:
    kind: Service
    name: kong-kong-proxy
    weight: 100
  port:
    targetPort: kong-proxy
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIJCjCCB/KgAwIBAgIQO1hJ2KZwJRo8IOp4Wb35ljANBgkqhkiG9w0BAQsFADCB
[...]
      KwndZyaB8J/R5zhiYyg=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFDjCCA/agAwIBAgIMDulMwwAAAABR03eFMA0GCSqGSIb3DQEBCwUAMIG+MQsw
[...]
      Lcw=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIEPjCCAyagAwIBAgIESlOMKDANBgkqhkiG9w0BAQsFADCBvjELMAkGA1UEBhMC
[...]
      VHOkc8KT/1EQrBVUAdj8BbGJoX90g5pJ19xOe4pIb4tF9g==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIJQwIBADANBgkqhkiG9w0BAQEFAASCCS0wggkpAgEAAoICAQDrgCmQbg1y4Utl
[...]
      nfXNl+PcUFrqCjs/L6eS6WQZfp5/xo4=
      -----END PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: snowplow.test.api.gov.bc.ca
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2021-03-09T10:57:08Z'
      wildcardPolicy: None
      routerCanonicalHostname: apps.silver.devops.gov.bc.ca
